# nextui-updater-pak

./: .gitignore  Cargo.toml  LICENSE  README.md  pak.json
scripts/: create_pak.sh
src/: app_state.rs  github.rs  main.rs  ui.rs
src/update/: fetching.rs  mod.rs
