[package]
name = "nextui-updater-rs"
version = "0.3.3"
edition = "2021"

[profile]
dev.strip = "debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.1"
egui_sdl2_gl = "0.31.0"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
reqwest = { version = "0.12.15", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }
sdl2 = { version = "0.37.0", features = ["bundled"] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
zip = "2.4.2"
